Refactor Legal Page and NavBar Styles, Update Contact Form HTML, and Enhance Package Scripts
- Improved formatting and indentation in the Legal page component for better readability.
- Refactored NavBar component styles for consistency and clarity.
- Updated contact-form.html to use lowercase doctype and improved indentation.
- Added a new script in package.json for running ESLint and Prettier together.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "eslint --fix . && prettier --write ."
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
