feat: implement ContactForm component and integrate form submission with Netlify

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint app components lib",
     "format": "prettier --write .",
-    "prepare": "eslint --fix . && prettier --write ."
+    "prepare": "eslint --fix app components lib && prettier --write ."
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
