feat: add automated image compression and conversion script
- Implemented a script to compress all PNG files and convert specified opaque PNGs to JPG format.
- Automatically updates component imports to reflect changes in image formats.
- Provides a summary of original and compressed image sizes, along with savings.
- Ensures sharp library is installed for image processing.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint app components lib",
     "format": "prettier --write .",
-    "prepare": "eslint --fix app components lib && prettier --write ."
+    "prepare": "eslint --fix app components lib && prettier --write .",
+    "compress-images": "node scripts/compress-images-auto.js"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
